# =================================================================================
# cmake-format: off
# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES.
# SPDX-License-Identifier: Apache-2.0
# cmake-format: on
# =================================================================================

add_subdirectory(_detail)
add_subdirectory(chunks)
add_subdirectory(coll)
add_subdirectory(core)
add_subdirectory(cudf)
